fix scroll down icon on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 
 html,
-body, p {
+body {
   padding: 0;
   margin: 0;
+  height: 100%;
   scroll-behavior: smooth;
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
